# bibclean

./: .flake8  .pre-commit-hooks.yaml  README.md  index.html  pyproject.toml
.github/workflows/: build.yml  code-style.yml  doc.yml  publish.yml  pytest.yml  test.yml
bibclean/: __init__.py  _exception.py  _typing.py  check.py  clean.py  io.py
bibclean/commands/: bibclean.py  bibclean_check.py
bibclean/config/: __init__.py  config.py  default.ini  default.toml
bibclean/config/tests/: test_config.py
bibclean/config/tests/data/: bibclean-missing.toml  duplicates.toml  invalid-duplicate-fields.toml  invalid-exclude-type.toml  invalid-exclude.toml  invalid-keys-plural.toml  invalid-keys-singular.toml  invalid-missing-keep-def.toml  invalid-missing-req-def.toml  invalid-missing-section.toml  invalid-missing-tool.toml  keep-missing.toml  required-missing.toml  tool-missing.toml  valid-2.toml  valid-exclude-type.toml  valid-exclusion.toml  valid-no-book.toml  valid.toml
bibclean/tests/: test_check.py  test_clean.py  test_cli.py  test_io.py
bibclean/tests/data/: zotero-clean.bib  zotero-duplicates-2.bib  zotero-duplicates.bib  zotero-duplicates.toml  zotero-keep-fields.bib  zotero-missing-fields.bib
bibclean/utils/: __init__.py  _docs.py  logs.py  utils.py
bibclean/utils/tests/: test_config.py  test_utils.py
data/: README.md  duplicate.bib  numpy.bib  zotero.bib
dev/: .buildinfo  bibtex.html  cli.html  configuration.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
dev/.doctrees/: bibtex.doctree  cli.doctree  configuration.doctree  index.doctree
dev/.doctrees/api/: check.doctree  clean.doctree  config.doctree  index.doctree  io.doctree  logging.doctree  utils.doctree
dev/.doctrees/changes/: 0.1.doctree  0.2.doctree  0.3.doctree  0.4.doctree  0.5.doctree  0.6.doctree  0.7.doctree  0.8.doctree  index.doctree  latest.doctree
dev/_sources/: bibtex.rst.txt  cli.rst.txt  configuration.rst.txt  index.rst.txt
dev/_sources/api/: config.rst.txt  io.rst.txt
dev/_sources/changes/: 0.1.rst.txt  0.2.rst.txt  0.3.rst.txt  0.4.rst.txt  0.5.rst.txt  0.6.rst.txt  0.8.rst.txt  index.rst.txt  latest.rst.txt
dev/_static/: documentation_options.js
dev/api/: check.html  clean.html  config.html  index.html  io.html  logging.html  utils.html
dev/changes/: 0.1.html  0.2.html  0.3.html  0.4.html  0.5.html  0.6.html  0.7.html  0.8.html  index.html  latest.html
doc/: conf.py  configuration.rst  links.inc
doc/_templates/autosummary/: class.rst
doc/api/: check.rst  clean.rst  config.rst  index.rst  io.rst  logging.rst  utils.rst
doc/changes/: 0.1.rst  0.2.rst  0.3.rst  0.4.rst  0.5.rst  0.7.rst  0.8.rst  index.rst  latest.rst
