[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'bibclean'
version = '0.2.0'
description = 'A simple BibTex file checker and cleaner.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.8'
authors = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
maintainers = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
keywords = [
    'python',
    'bibtex',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
]
dependencies = [
    'bibtexparser',
    'numpy>=1.21',
    'psutil',
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
doc = [
    'furo',
    'matplotlib',
    'memory-profiler',
    'numpydoc',
    'sphinx',
    'sphinxcontrib-bibtex',
    'sphinx-copybutton',
    'sphinx-design',
    'sphinx-issues',
]
style = [
    'black',
    'codespell',
    'isort',
    'flake8',
    'pydocstyle[toml]',
]
test = [
    'pytest',
    'pytest-cov',
]
all = [
    'bibclean[style]',
    'bibclean[doc]',
    'bibclean[test]',
    'bibclean[build]',
]
full = [
    'bibclean[all]',
]

[project.urls]
homepage = 'https://github.com/mscheltienne/bibclean'
documentation = 'https://github.com/mscheltienne/bibclean'
source = 'https://github.com/mscheltienne/bibclean'
tracker = 'https://github.com/mscheltienne/bibclean/issues'

[project.scripts]
bibclean-sys_info = 'bibclean.commands.sys_info:run'
bibclean = 'bibclean.commands.bibclean:run'
bibclean-check = 'bibclean.commands.bibclean_check:run'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['bibclean*']
exclude = ['bibclean*tests']

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | setup.py
    | data/
    | doc/
    | tutorials/
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 79
py_version = 38
extend_skip_glob = [
    'setup.py',
    'data/*',
    'doc/*',
    'tutorials/*'
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^bibclean.*'
add_ignore = 'D100,D104,D107'

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/bibclean/_version.py',
    '**/bibclean/commands/*',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
]
precision = 2
