[build-system]
requires = ['setuptools >= 64.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'bibclean'
version = '0.7.0'
description = 'A simple BibTex file checker and cleaner.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.9'
authors = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
maintainers = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
keywords = [
    'bibliography',
    'bibtex',
    'python',
]
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    'bibtexparser==1.4.0',
    'numpy>=1.21',
    'psutil',
    'toml',
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
doc = [
    'furo',
    'numpydoc',
    'sphinx',
    'sphinx-copybutton',
    'sphinx-design',
    'sphinx-issues',
]
style = [
    'black',
    'codespell',
    'isort',
    'pydocstyle[toml]',
    'ruff',
]
test = [
    'pytest',
    'pytest-cov',
]
all = [
    'bibclean[style]',
    'bibclean[doc]',
    'bibclean[test]',
    'bibclean[build]',
]
full = [
    'bibclean[all]',
]

[project.urls]
homepage = 'https://github.com/mscheltienne/bibclean'
documentation = 'https://mscheltienne.github.io/bibclean/'
source = 'https://github.com/mscheltienne/bibclean'
tracker = 'https://github.com/mscheltienne/bibclean/issues'

[project.scripts]
bibclean-sys_info = 'bibclean.commands.sys_info:run'
bibclean = 'bibclean.commands.bibclean:run'
bibclean-check = 'bibclean.commands.bibclean_check:run'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['bibclean*']
exclude = ['bibclean*tests']

[tool.setuptools.package-data]
"bibclean.config" = ["*.toml"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | setup.py
    | doc/
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 88
py_version = 39
extend_skip_glob = [
    'setup.py',
    'doc/*^',
]

[tool.ruff]
line-length = 88
extend-exclude = [
    "doc",
    "setup.py",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^bibclean.*'
add_ignore = 'D100,D104,D107'

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml -v --color=yes'
junit_family = 'xunit2'
minversion = '6.0'

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/bibclean/_version.py',
    '**/bibclean/commands/*',
    '**/bibclean/utils/_fixes.py',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
]
precision = 2
